--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -2,14 +2,21 @@
   "display": "Node 16",
   "compilerOptions": {
     "allowJs": true,
-    "moduleResolution": "Node",
-    "baseUrl": "src",
+    "target": "ESNext",
+    "module": "ESNext",
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "declaration": true,
+    "importHelpers": true,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
     "outDir": "build/",
     "rootDir": "src/",
-    "module": "ESNext",
-    "target": "ESNext",
-    "allowSyntheticDefaultImports": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noImplicitReturns": true,
+    "moduleResolution": "node",
     "resolveJsonModule": true,
-    "removeComments": true
+    "skipLibCheck": true
   }
 }
