--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -8,8 +8,8 @@
     "allowSyntheticDefaultImports": true,
     "outDir": "build/",
     "rootDir": "src/",
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
     "noImplicitReturns": true,
     "moduleResolution": "node",
     "resolveJsonModule": true,
